[gd_scene load_steps=15 format=3 uid="uid://do45bndwp7ufu"]

[ext_resource type="Script" path="res://Player_script.gd" id="1_pcmxo"]
[ext_resource type="Script" path="res://Main_scene.gd" id="1_wh51s"]
[ext_resource type="Theme" uid="uid://qi2wtak3apft" path="res://standart_theme.tres" id="3_esu07"]
[ext_resource type="Script" path="res://Menu.gd" id="3_h5j25"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_j7guf"]
sky_top_color = Color(0, 0, 0, 1)
sky_horizon_color = Color(0.5, 0.5, 0.5, 1)
sky_energy_multiplier = 0.0
ground_bottom_color = Color(0, 0, 0, 1)
ground_horizon_color = Color(0.5, 0.5, 0.5, 1)

[sub_resource type="Sky" id="Sky_ggmty"]
sky_material = SubResource("ProceduralSkyMaterial_j7guf")

[sub_resource type="Environment" id="Environment_1xn3t"]
background_mode = 2
sky = SubResource("Sky_ggmty")
fog_enabled = true
fog_light_color = Color(0.864675, 0.864675, 0.864675, 1)
fog_light_energy = 0.21

[sub_resource type="BoxMesh" id="BoxMesh_jfsdd"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sk5jl"]

[sub_resource type="BoxMesh" id="BoxMesh_a1v73"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nd6hr"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4048t"]
size = Vector3(0.542358, 0.55426, 0.557678)

[sub_resource type="Gradient" id="Gradient_yo5d1"]
colors = PackedColorArray(0.403922, 0.913725, 0, 1, 1, 0.552941, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6i7qq"]
gradient = SubResource("Gradient_yo5d1")
width = 100
height = 10
fill_from = Vector2(0, 0.579151)
fill_to = Vector2(1, 0.46332)

[node name="Main_scene" type="Node3D" node_paths=PackedStringArray("Menu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.267792)
script = ExtResource("1_wh51s")
Menu = NodePath("CanvasLayer/Menu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.663926, -0.647612, 0.373899, 0, 0.5, 0.866025, -0.747798, -0.574977, 0.331963, 1.80413, 0, 5.7681)
light_color = Color(0.54099, 0.54099, 0.54099, 1)
light_energy = 1.55
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1xn3t")

[node name="Player" type="CharacterBody3D" parent="." node_paths=PackedStringArray("SpeedBarHorizontalForward", "SpeedBarHorizontalBackward", "SpeedBarHorizontalRight", "SpeedBarHorizontalLeft", "SpeedBarHorizontalUp", "SpeedBarHorizontalDown", "FPS")]
transform = Transform3D(1.00292, 0, 0, 0, 1.00292, 0, 0, 0, 1.00292, 0, 0, 2.4731)
motion_mode = 1
script = ExtResource("1_pcmxo")
SpeedBarHorizontalForward = NodePath("../CanvasLayer/SpeedBars/SpeedBarHorizontalForward")
SpeedBarHorizontalBackward = NodePath("../CanvasLayer/SpeedBars/SpeedBarHorizontalBackward")
SpeedBarHorizontalRight = NodePath("../CanvasLayer/SpeedBars/SpeedBarHorizontalRight")
SpeedBarHorizontalLeft = NodePath("../CanvasLayer/SpeedBars/SpeedBarHorizontalLeft")
SpeedBarHorizontalUp = NodePath("../CanvasLayer/SpeedBars/SpeedBarHorizontalUp")
SpeedBarHorizontalDown = NodePath("../CanvasLayer/SpeedBars/SpeedBarHorizontalDown")
FPS = NodePath("../CanvasLayer/FPS")

[node name="Player_texture" type="MeshInstance3D" parent="Player"]
transform = Transform3D(0.518529, 0, 0, 0, 0.531536, 0, 0, 0, 0.512106, 0, 0, 0)
visible = false
mesh = SubResource("BoxMesh_jfsdd")

[node name="Player_collision" type="CollisionShape3D" parent="Player"]
transform = Transform3D(0.997085, 0, 0, 0, 0.997085, 0, 0, 0, 0.997085, 0, 0, 0)
shape = SubResource("CapsuleShape3D_sk5jl")

[node name="Player_head" type="Node3D" parent="Player"]

[node name="Player_camera" type="Camera3D" parent="Player/Player_head"]
transform = Transform3D(0.997088, 0, 0, 0, 0.997088, 0, 0, 0, 0.997088, 0, 0.336201, -0.108962)

[node name="Flashlight" type="SpotLight3D" parent="Player/Player_head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.299063, 0.377477, 0.170381)
light_color = Color(1, 1, 0.831373, 1)
light_energy = 2.0
spot_range = 9.423
spot_angle = 14.8899

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("BoxMesh_a1v73")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_nd6hr")

[node name="StaticBody3D" type="StaticBody3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00254, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D/StaticBody3D"]
transform = Transform3D(0.565, 0, 0, 0, 0.565, 0, 0, 0, 0.565, 0, -0.250663, 0)
mesh = SubResource("BoxMesh_a1v73")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/StaticBody3D"]
shape = SubResource("BoxShape3D_nd6hr")

[node name="StaticBody3D3" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.77844, 0, 2.54505)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D3"]
mesh = SubResource("BoxMesh_a1v73")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D3"]
shape = SubResource("BoxShape3D_nd6hr")

[node name="StaticBody3D" type="StaticBody3D" parent="StaticBody3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00254, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D3/StaticBody3D"]
transform = Transform3D(0.565, 0, 0, 0, 0.565, 0, 0, 0, 0.565, 0, -0.250663, 0)
mesh = SubResource("BoxMesh_a1v73")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D3/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00262451, -0.229156, -0.028717)
shape = SubResource("BoxShape3D_4048t")

[node name="StaticBody3D4" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.69631, 0, 2.54505)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D4"]
mesh = SubResource("BoxMesh_a1v73")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D4"]
shape = SubResource("BoxShape3D_nd6hr")

[node name="StaticBody3D" type="StaticBody3D" parent="StaticBody3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00254, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D4/StaticBody3D"]
transform = Transform3D(0.565, 0, 0, 0, 0.565, 0, 0, 0, 0.565, 0, -0.250663, 0)
mesh = SubResource("BoxMesh_a1v73")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D4/StaticBody3D"]
shape = SubResource("BoxShape3D_nd6hr")

[node name="StaticBody3D2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.98077)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D2"]
mesh = SubResource("BoxMesh_a1v73")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D2"]
shape = SubResource("BoxShape3D_nd6hr")

[node name="StaticBody3D" type="StaticBody3D" parent="StaticBody3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00254, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D2/StaticBody3D"]
transform = Transform3D(0.565, 0, 0, 0, 0.565, 0, 0, 0, 0.565, 0, -0.250663, 0)
mesh = SubResource("BoxMesh_a1v73")

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D2/StaticBody3D"]
shape = SubResource("BoxShape3D_nd6hr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FPS" type="RichTextLabel" parent="CanvasLayer"]
offset_right = 469.0
offset_bottom = 40.0

[node name="Menu" type="Control" parent="CanvasLayer"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_esu07")
script = ExtResource("3_h5j25")

[node name="MenuContainer" type="VBoxContainer" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="CanvasLayer/Menu/MenuContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="CanvasLayer/Menu/MenuContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="CanvasLayer/Menu/MenuContainer"]
layout_mode = 2
text = "Exit"

[node name="OptionsContainer" type="HBoxContainer" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.5
offset_top = -15.5
offset_right = 88.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="CanvasLayer/Menu/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="FullScreen" type="Label" parent="CanvasLayer/Menu/OptionsContainer/Labels"]
layout_mode = 2
text = "FullScreen"

[node name="Values" type="VBoxContainer" parent="CanvasLayer/Menu/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="FullScreenCheck" type="CheckButton" parent="CanvasLayer/Menu/OptionsContainer/Values"]
layout_mode = 2

[node name="OptionsBackButton" type="Button" parent="CanvasLayer/Menu/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[node name="SpeedBars" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -231.0
offset_right = 246.0
grow_vertical = 0

[node name="SpeedBarHorizontalDown" type="TextureProgressBar" parent="CanvasLayer/SpeedBars"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 113.0
offset_top = -112.0
offset_right = 213.0
offset_bottom = -102.0
grow_vertical = 0
rotation = 4.71239
max_value = 30.0
value = 30.0
rounded = true
texture_progress = SubResource("GradientTexture2D_6i7qq")

[node name="SpeedBarHorizontalForward" type="TextureProgressBar" parent="CanvasLayer/SpeedBars"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 117.0
offset_top = -99.0
offset_right = 217.0
offset_bottom = -89.0
grow_vertical = 0
rotation = 2.35619
max_value = 30.0
value = 30.0
rounded = true
texture_progress = SubResource("GradientTexture2D_6i7qq")

[node name="SpeedBarHorizontalBackward" type="TextureProgressBar" parent="CanvasLayer/SpeedBars"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 119.0
offset_top = -115.0
offset_right = 219.0
offset_bottom = -105.0
grow_vertical = 0
rotation = -0.785398
max_value = 30.0
value = 30.0
rounded = true
texture_progress = SubResource("GradientTexture2D_6i7qq")

[node name="SpeedBarHorizontalRight" type="TextureProgressBar" parent="CanvasLayer/SpeedBars"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 123.0
offset_top = -112.0
offset_right = 223.0
offset_bottom = -102.0
grow_vertical = 0
max_value = 30.0
value = 30.0
rounded = true
texture_progress = SubResource("GradientTexture2D_6i7qq")

[node name="SpeedBarHorizontalLeft" type="TextureProgressBar" parent="CanvasLayer/SpeedBars"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 113.0
offset_top = -102.0
offset_right = 213.0
offset_bottom = -92.0
grow_vertical = 0
rotation = 3.14159
max_value = 30.0
value = 30.0
rounded = true
texture_progress = SubResource("GradientTexture2D_6i7qq")

[node name="SpeedBarHorizontalUp" type="TextureProgressBar" parent="CanvasLayer/SpeedBars"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 123.0
offset_top = -102.0
offset_right = 223.0
offset_bottom = -92.0
grow_vertical = 0
rotation = 1.5708
max_value = 30.0
value = 30.0
rounded = true
texture_progress = SubResource("GradientTexture2D_6i7qq")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="CanvasLayer/Menu/MenuContainer/Resume" to="CanvasLayer/Menu" method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/MenuContainer/Options" to="CanvasLayer/Menu" method="_on_options_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/MenuContainer/Exit" to="CanvasLayer/Menu" method="_on_exit_pressed"]
[connection signal="toggled" from="CanvasLayer/Menu/OptionsContainer/Values/FullScreenCheck" to="CanvasLayer/Menu" method="_on_check_button_toggled"]
[connection signal="pressed" from="CanvasLayer/Menu/OptionsContainer/OptionsBackButton" to="CanvasLayer/Menu" method="_on_options_back_button_pressed"]
